<resources>
    <string name="app_name">RU Pizzeria</string>
    <string name="background_picture_for_main_page">Background picture for main page</string>
    <string name="ru_pizzeria">RU Pizzeria</string>
    <string name="order_history">Order History</string>
    <string name="place_order">Order Pizza</string>
    <string name="create_your_pizza">Create Your Pizza</string>
    <string name="choose_pizza_type_toppings">Choose pizza type/toppings:</string>
    <string name="view_order">View Order</string>
    <string name="deluxe">Deluxe Pizza</string>
    <string name="meatzza">Meatzza Pizza </string>
    <string name="bbq_chicken">BBQ Chicken</string>
    <string name="build_your_own">Build Your Own</string>
    <string name="choose_size">Choose size:</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="choose_style">Choose style:</string>
    <string name="chicago">Chicago</string>
    <string name="new_york">New York</string>
    <string name="orderpage_name" />
    <string name="choose_type">Choose Pre-made/Build Your Own:</string>
    <string name="sausage">Sausage</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="ham">Ham</string>
    <string name="green_pepper">Green Pepper</string>
    <string name="buffalo_chicken">Buffalo Chicken</string>
    <string name="onion">Onion</string>
    <string name="pineapple">Pineapple</string>
    <string name="black_olive">Black Olive</string>
    <string name="mushroom">Mushroom</string>
    <string name="jalapeno">Jalapeno</string>
    <string name="basil">Basil</string>
    <string name="bbq_chicken_pizza">BBQ Chicken Pizza</string>
    <string name="place_price_here">place price here</string>
    <string name="pizza_cart">Put pizza in cart</string>
    <string name="history_page_name" />
    <string name="history">History</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="current_order">Current Order</string>
    <string name="_0_00">$0.00</string>
    <string name="_16_99">$16.99</string>
    <string name="subtotal">subtotal</string>
    <string name="Cancel">Cancel</string>
</resources>