<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/viewOrderButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:text="@string/view_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:text="@string/create_your_pizza"
        app:layout_constraintEnd_toStartOf="@+id/viewOrderButton"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="380dp"
        android:layout_height="550dp"
        app:layout_constraintBottom_toTopOf="@+id/price_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewOrderButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/choose_style_question"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/choose_style" />

            <RadioGroup
                android:id="@+id/pizza_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/chicago_style_button">

                <RadioButton
                    android:id="@+id/chicago_style_button"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:text="@string/chicago" />

                <RadioButton
                    android:id="@+id/NY_style_button"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:text="@string/new_york" />

            </RadioGroup>

            <TextView
                android:id="@+id/choose_type_question"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/choose_type" />

            <RadioGroup
                android:id="@+id/pizza_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/deluxe_pizza">

                <RadioButton
                    android:id="@+id/deluxe_pizza"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:text="@string/deluxe" />

                <RadioButton
                    android:id="@+id/meatzza_pizza"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:text="@string/meatzza" />

                <RadioButton
                    android:id="@+id/bbq_chicken_pizza"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:text="@string/bbq_chicken_pizza"/>

                <RadioButton
                    android:id="@+id/BYO_pizza"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:text="@string/build_your_own" />
            </RadioGroup>

            <TextView
                android:id="@+id/topping_question"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:visibility="gone"
                android:text="@string/choose_pizza_type_toppings"/>

            <CheckBox
                android:id="@+id/sausage"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:visibility="gone"
                android:text="@string/sausage" />

            <CheckBox
                android:id="@+id/pepperoni"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:visibility="gone"
                android:text="@string/pepperoni" />

            <CheckBox
                android:id="@+id/ham"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:visibility="gone"
                android:text="@string/ham" />

            <CheckBox
                android:id="@+id/bbq_chicken"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:visibility="gone"
                android:text="@string/bbq_chicken" />

            <CheckBox
                android:id="@+id/buffalo_chicken"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:visibility="gone"
                android:text="@string/buffalo_chicken" />

            <CheckBox
                android:id="@+id/green_pepper"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:visibility="gone"
                android:text="@string/green_pepper" />

            <CheckBox
                android:id="@+id/onion"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:visibility="gone"
                android:text="@string/onion" />

            <CheckBox
                android:id="@+id/pineapple"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:visibility="gone"
                android:text="@string/pineapple" />

            <CheckBox
                android:id="@+id/black_olive"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:visibility="gone"
                android:text="@string/black_olive" />

            <CheckBox
                android:id="@+id/mushroom"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:visibility="gone"
                android:text="@string/mushroom" />

            <CheckBox
                android:id="@+id/jalapeno"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:visibility="gone"
                android:text="@string/jalapeno" />

            <CheckBox
                android:id="@+id/basil"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:visibility="gone"
                android:text="@string/basil" />

            <TextView
                android:id="@+id/size_question"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/choose_size"/>

            <RadioGroup
                android:id="@+id/pizza_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/small">

                <RadioButton
                    android:id="@+id/small"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:text="@string/small"/>

                <RadioButton
                    android:id="@+id/medium"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:text="@string/medium"/>

                <RadioButton
                    android:id="@+id/large"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:text="@string/large"/>
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/place_pizza_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="28dp"
        android:text="@string/pizza_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/price_box"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/price_box"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:text="@string/_16_99"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>