<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="130dp"
        android:layout_height="32dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="239dp"
        android:layout_marginBottom="654dp"
        android:text="@string/current_order"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/CurrentOrderView"
        android:layout_width="328dp"
        android:layout_height="430dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="194dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/placeOrderButton"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:text="@string/place_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CurrentOrderView"
        app:layout_constraintVertical_bias="0.933" />

    <Button
        android:id="@+id/cancelOrder"
        android:layout_width="157dp"
        android:layout_height="47dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        android:text="@string/cancel_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toEndOf="@+id/placeOrderButton"
        app:layout_constraintTop_toBottomOf="@+id/CurrentOrderView"
        app:layout_constraintVertical_bias="0.937" />

    <TextView
        android:id="@+id/orderCostView"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="553dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="98dp"
        android:lines="3"
        android:text=""
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>